--- a/view/assets/css/style.css
+++ b/view/assets/css/style.css
@@ -16,6 +16,23 @@ img {
   display: block;
 }
 
+[type=radio] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* IMAGE STYLES */
+[type=radio] + img {
+  cursor: pointer;
+}
+
+/* CHECKED STYLES */
+[type=radio]:checked + img {
+  outline: 2px solid #1E1E24;
+}
+
 button {
   color: white;
   border: none;
@@ -26,6 +43,7 @@ button {
   width: 100%;
   -webkit-transition: all .5s ease;
   transition: all .5s ease;
+  pointer-events: auto;
 }
 
 button:hover {
@@ -552,7 +570,20 @@ body #content .collection {
   }
 }
 
-body #content .collection .item {
+body #content .collection a {
+  height: 40vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 850px) {
+  body #content .collection a {
+    height: auto;
+  }
+}
+
+body #content .collection a .item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -564,7 +595,7 @@ body #content .collection .item {
           justify-content: center;
 }
 
-body #content .collection .item h3 {
+body #content .collection a .item h3 {
   text-align: center;
   position: absolute;
   color: white;
@@ -573,7 +604,7 @@ body #content .collection .item h3 {
   font-variant: small-caps;
 }
 
-body #content .collection .item img {
+body #content .collection a .item img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -589,8 +620,8 @@ body #content h4 {
 body #content .collection-2 {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   grid-gap: 1rem;
   width: 80%;
   margin: 1vw;
@@ -600,8 +631,6 @@ body #content .collection-2 {
   body #content .collection-2 {
     width: 100%;
     grid-gap: 3vw;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -1031,53 +1060,99 @@ body #content-product #slogan h1 {
 
 body #content-product .collection-products {
   width: 90vw;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 1vw;
   height: 100%;
+  -webkit-box-align: space-between;
+      -ms-flex-align: space-between;
+          align-items: space-between;
 }
 
 @media (max-width: 850px) {
   body #content-product .collection-products {
     width: 100%;
     height: 100%;
-    grid-gap: 3vw;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
   }
 }
 
-body #content-product .collection-products .item-product {
+body #content-product .collection-products a {
+  width: 30%;
+  height: 35vh;
+  margin: 1vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 850px) {
+  body #content-product .collection-products a {
+    height: auto;
+    width: 50%;
+    margin: 0;
+  }
+}
+
+body #content-product .collection-products a .item-product {
   height: 35vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  overflow: hidden;
 }
 
-body #content-product .collection-products .item-product .product-pic {
+@media (max-width: 850px) {
+  body #content-product .collection-products a .item-product {
+    height: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding: 3%;
+  }
+}
+
+body #content-product .collection-products a .item-product .product-pic {
   -webkit-transition: all .5s ease;
   transition: all .5s ease;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-body #content-product .collection-products .item-product .product-pic img {
+body #content-product .collection-products a .item-product .product-pic img {
   width: 100%;
-  min-height: 100%;
+  min-height: 30vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-body #content-product .collection-products .item-product .product-infos {
+@media (max-width: 850px) {
+  body #content-product .collection-products a .item-product .product-pic img {
+    height: 30vh;
+  }
+}
+
+body #content-product .collection-products a .item-product .product-infos {
   color: #1E1E24;
   text-align: center;
   position: absolute;
@@ -1087,22 +1162,36 @@ body #content-product .collection-products .item-product .product-infos {
 }
 
 @media (max-width: 850px) {
-  body #content-product .collection-products .item-product .product-infos {
+  body #content-product .collection-products a .item-product .product-infos {
+    text-align: left;
     position: relative;
+    opacity: 1;
   }
 }
 
-body #content-product .collection-products .item-product .product-infos .product-title {
+body #content-product .collection-products a .item-product .product-infos .product-title {
   font-size: 2rem;
   line-height: 150%;
 }
 
-body #content-product .collection-products .item-product .product-infos sup {
+@media (max-width: 850px) {
+  body #content-product .collection-products a .item-product .product-infos .product-title {
+    font-size: 1rem;
+  }
+}
+
+body #content-product .collection-products a .item-product .product-infos .product-price {
+  font-size: 2.5rem;
+}
+
+body #content-product .collection-products a .item-product .product-infos .product-price sup {
   text-decoration: underline;
 }
 
-body #content-product .collection-products .item-product .product-infos .product-price {
-  font-size: 2.5rem;
+@media (max-width: 850px) {
+  body #content-product .collection-products a .item-product .product-infos .product-price {
+    font-size: 1rem;
+  }
 }
 
 body #content-product #product-page {
@@ -1114,9 +1203,9 @@ body #content-product #product-page {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1133,7 +1222,7 @@ body #content-product #product-page {
 }
 
 body #content-product #product-page #product-pics {
-  width: 35vw;
+  width: 50vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1175,6 +1264,7 @@ body #content-product #product-page #product-pics #product-pic-secondary {
 }
 
 body #content-product #product-page #product-pics #product-pic-secondary img {
+  display: block;
   overflow: hidden;
   width: 20%;
   -o-object-fit: cover;
@@ -1187,8 +1277,45 @@ body #content-product #product-page #product-pics .image-selected {
 }
 
 body #content-product #product-page #product-infos {
-  margin-left: 10vw;
+  margin-left: 5vw;
   width: 50%;
+  font-variant: normal;
+}
+
+body #content-product #product-page #product-infos .details {
+  margin-bottom: 1.5vw;
+}
+
+body #content-product #product-page #product-infos sup {
+  text-decoration: underline;
+}
+
+body #content-product #product-page #product-infos .product-price {
+  margin: 1.5vw 0;
+  font-size: 2.5rem;
+}
+
+body #content-product #product-page #product-infos fieldset {
+  border: 0;
+  margin: 1vh 0;
+}
+
+body #content-product #product-page #product-infos button {
+  width: 15vw;
+}
+
+body #content-product #product-page #product-infos .image-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+body #content-product #product-page #product-infos .image-form img {
+  width: 5vh;
+  height: 5vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 1vh 1vh 0 0;
 }
 
 body .errors {
