--- a/view/assets/css/style.scss
+++ b/view/assets/css/style.scss
@@ -20,6 +20,23 @@ img {
   display: block;
 }
 
+[type=radio] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* IMAGE STYLES */
+[type=radio]+img {
+  cursor: pointer;
+}
+
+/* CHECKED STYLES */
+[type=radio]:checked+img {
+  outline: 2px solid $color;
+}
+
 button {
   color: white;
   border: none;
@@ -29,6 +46,7 @@ button {
   height: 5vh;
   width: 100%;
   transition: all .5s ease;
+  pointer-events: auto;
 
   &:hover {
     background-color: rgba($color, $alpha: 0.5);
@@ -476,26 +494,35 @@ body {
         margin: 3vw;
       }
 
-      .item {
+      a {
+        height: 40vh;
         display: flex;
-        align-items: center;
-        justify-content: center;
 
-
-        h3 {
-
-          text-align: center;
-          position: absolute;
-          color: white;
-          z-index: 100;
-          font-size: 1.2rem;
-          font-variant: small-caps;
+        @media (max-width: 850px) {
+          height: auto;
         }
 
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
+        .item {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+
+          h3 {
+
+            text-align: center;
+            position: absolute;
+            color: white;
+            z-index: 100;
+            font-size: 1.2rem;
+            font-variant: small-caps;
+          }
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
         }
       }
     }
@@ -508,7 +535,7 @@ body {
 
     .collection-2 {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: 1fr;
       grid-gap: 1rem;
       width: 80%;
       margin: 1vw;
@@ -516,7 +543,7 @@ body {
       @media (max-width:850px) {
         width: 100%;
         grid-gap: 3vw;
-        grid-template-columns: repeat(2, 1fr);
+        // grid-template-columns: repeat(2, 1fr);
       }
 
       .item {
@@ -837,60 +864,99 @@ body {
 
     .collection-products {
       width: 90vw;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-gap: 1rem;
+      display: flex;
+      flex-wrap: wrap;
       margin: 1vw;
       height: 100%;
-
+      align-items: space-between;
 
       @media (max-width:850px) {
         width: 100%;
         height: 100%;
-        grid-gap: 3vw;
-        grid-template-columns: repeat(2, 1fr);
       }
 
-      .item-product {
+      a {
+        width: 30%;
         height: 35vh;
+        margin: 1vw;
         display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
 
-        .product-pic {
-          transition: all .5s ease;
-          height: 100%;
-
-          img {
-            width: 100%;
-            min-height: 100%;
-            object-fit: cover;
-          }
-
+        @media (max-width: 850px) {
+          height: auto;
+          width: 50%;
+          margin: 0;
         }
 
-        .product-infos {
-          color: $color;
-          text-align: center;
-          position: absolute;
-          opacity: 0;
-          transition: all .5s ease;
+        .item-product {
+          height: 35vh;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: center;
 
-          @media (max-width: 850px) {
-            position: relative;
+          @media(max-width: 850px) {
+            height: auto;
+            flex-direction: column;
+            justify-content: start;
+            align-items: flex-start;
+            padding: 3%;
           }
 
-          .product-title {
-            font-size: 2rem;
-            line-height: 150%;
+          .product-pic {
+            transition: all .5s ease;
+            height: 100%;
+            display: flex;
+
+            img {
+              width: 100%;
+              min-height: 30vh;
+              object-fit: cover;
+
+              @media (max-width: 850px) {
+                height: 30vh;
+              }
+            }
+
           }
-          sup{
-            text-decoration:underline;
+
+          .product-infos {
+            color: $color;
+            text-align: center;
+            position: absolute;
+            opacity: 0;
+            transition: all .5s ease;
+
+            @media (max-width: 850px) {
+              text-align: left;
+              position: relative;
+              opacity: 1;
+            }
+
+            .product-title {
+              font-size: 2rem;
+              line-height: 150%;
+
+              @media (max-width: 850px) {
+                font-size: 1rem;
+              }
+            }
+
+
+            .product-price {
+              font-size: 2.5rem;
+
+              sup {
+                text-decoration: underline;
+              }
+
+              @media (max-width: 850px) {
+                font-size: 1rem;
+              }
+            }
           }
-          .product-price {
-            font-size: 2.5rem;
-          }
+
+
+
         }
 
       }
@@ -901,7 +967,7 @@ body {
       width: 80%;
       display: flex;
       flex-direction: row;
-      align-items: center;
+      align-items: flex-start;
       justify-content: center;
       margin: 3vw;
 
@@ -910,7 +976,7 @@ body {
       }
 
       #product-pics {
-        width: 35vw;
+        width: 50vw;
         display: flex;
         flex-direction: column;
         overflow: scroll;
@@ -937,9 +1003,9 @@ body {
           overflow: scroll;
 
           img {
+            display: block;
             overflow: hidden;
             width: 20%;
-            // min-height: 80%;
             object-fit: cover;
             padding: 1vw 1vw 0 0;
           }
@@ -951,10 +1017,45 @@ body {
       }
 
       #product-infos {
-        margin-left: 10vw;
+        margin-left: 5vw;
         width: 50%;
+        font-variant: normal;
+
+        .details {
+          margin-bottom: 1.5vw;
+        }
+
+        sup {
+          text-decoration: underline;
+        }
+
+        .product-price {
+          margin: 1.5vw 0;
+          font-size: 2.5rem;
+        }
+
+        fieldset {
+          border: 0;
+          margin: 1vh 0;
+        }
+
+        button {
+          width: 15vw;
+        }
+
+        .image-form {
+          display: flex;
+
+          img {
+            width: 5vh;
+            height: 5vh;
+            object-fit: cover;
+            margin: 1vh 1vh 0 0;
+          }
+        }
       }
     }
+
 
   }
 
